<resources>
    <string name="app_name">KFH Assessment</string>
    <string name="iban_number">IBAN Number</string>
    <string name="validate_iban_number">Validate IBAN Number</string>
    <string name="from_currency">From Currency</string>
    <string name="to_currency">To Currency</string>
    <string name="convert">Convert</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kuwait_kwd">Kuwait (KWD)</string>
    <string name="select_currency">Select Currency</string>
    <string name="done">Done</string>
    <string name="amount">Amount</string>
    <string name="this_field_is_required">This Field is Required</string>
    <string name="invalid_iban_number">Invalid IBAN Number</string>
    <string name="great_entered_iban_number_is_valid">Great! Entered IBAN Number is Valid.</string>
    <string name="search_currency">Search Currency</string>
    <string name="instantly_validate_your_iban_number">Instantly validate your IBAN Number.</string>
    <string name="curreny_convertion">Currency Conversion</string>
</resources>